--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -26,7 +26,7 @@
                     android:layout_marginLeft="100dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="100dp"
-                    android:hint="Codigo Factura">
+                    android:hint="@string/codigo_factura">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editfactura"
@@ -43,7 +43,7 @@
                     android:layout_marginLeft="100dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="100dp"
-                    android:hint="Fecha">
+                    android:hint="@string/fecha">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/ediFecha"
