--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,20 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/home">
+    app:startDestination="@+id/navigation_home">
+
     <fragment
-        android:id="@+id/home"
-        android:name="com.example.myapplication.ui.Home"
-        android:label="fragment_home"
+        android:id="@+id/navigation_home"
+        android:name="com.example.concesionario.ui.Home"
+        android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/shop"
-        android:name="com.example.myapplication.ui.Shop"
+        android:name="com.example.concesionario.ui.Shop"
         android:label="fragment_shop"
         tools:layout="@layout/fragment_shop" />
     <fragment
         android:id="@+id/github"
-        android:name="com.example.myapplication.ui.github"
+        android:name="com.example.concesionario.ui.github"
         android:label="fragment_github"
         tools:layout="@layout/fragment_github" />
+
 </navigation>
